# tere

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-release.sh  default.nix  flake.nix  shell.nix
.cargo/: config.toml
.github/workflows/: build_nix.yml
demo/: README.md  generate_example_folders.py
src/: app_state.rs  cli_args.rs  error.rs  first_run_check.rs  history.rs  installation_check.rs  main.rs  panic_guard.rs  settings.rs
src/ui/: action.rs  help_window.rs  markup_render.rs  mod.rs
tests/: cli.rs  expected-output-basic.txt
