[package]
name = "tere"
version = "1.1.0"
authors = ["Márton Gunyhó <marci@gunyho.com>"]
edition = "2018"
description = "Terminal file explorer"
license = "EUPL-1.2"
repository = "https://github.com/mgunyho/tere/"
keywords = ["tui", "terminal", "file", "explorer"]
categories = ["command-line-utilities"]


[dependencies]
crossterm = "0.24.0"
dirs = "4.0.0"
regex = "1.6.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["rc"] }
textwrap = "0.15"
unicode-segmentation = "1.9"
crokey = "0.5"

[dependencies.clap]
version = "3"
default-features = false
features = ["wrap_help", "suggestions", "std"]

[profile.release]
lto = true
strip = "debuginfo"
