[package]
name = "tere"
version = "1.3.1"
authors = ["Márton Gunyhó <marci@gunyho.com>"]
edition = "2018"
description = "Terminal file explorer"
license = "EUPL-1.2"
repository = "https://github.com/mgunyho/tere/"
keywords = ["tui", "terminal", "file", "explorer"]
categories = ["command-line-utilities"]


[dependencies]
crossterm = "0.24.0"
dirs = "4.0.0"
regex = "1.6.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["rc"] }
textwrap = "0.15"
unicode-segmentation = "1.9"
crokey = "0.5"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }

[dependencies.clap]
version = "4"
default-features = false
features = ["wrap_help", "suggestions", "std", "derive", "usage"]

[profile.release]
lto = true
strip = "debuginfo"
