[package]
name = "tere"
version = "1.6.0"
authors = ["Márton Gunyhó <marci@gunyho.com>"]
edition = "2018"
description = "Terminal file explorer"
license = "EUPL-1.2"
repository = "https://github.com/mgunyho/tere/"
keywords = ["tui", "terminal", "file", "explorer"]
categories = ["command-line-utilities"]


[dependencies]
crossterm = "0.24.0"
dirs = "5.0"
regex = "1.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["rc"] }
textwrap = "0.16"
unicode-segmentation = "1.12"
crokey = "0.5"
strum_macros = "0.26"
strum = { version = "0.26", features = ["derive"] }

[dependencies.clap]
version = "4"
default-features = false
features = ["wrap_help", "suggestions", "std", "derive", "usage"]

[dev-dependencies]
tempfile = "3.12"

[target.'cfg(unix)'.dev-dependencies]
rexpect = "0.5"

[profile.release]
lto = true
strip = "debuginfo"
